<resources>
    <string name="app_name">AddressBook</string>
    <string name="action_settings">Settings</string>
    <string name="add_contact_title">Add Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="contacts_title">All Contacts</string>
    <string name="add_contacts_button">ADD</string>
    <string name="save_contacts_button">SAVE</string>
    <string name="edit_contacts_title">Edit Contacts</string>
    <string name="edit_contacts_button">EDIT</string>
    <string name="delete_contacts_button">DELETE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_contact">Add Contacts</string>
    <string name="title_activity_edit_contact">EditContact</string>
    <string name="contact_entries_first_name">First Name</string>
    <string name="contact_entries_ast_name">Last Name</string>
    <string name="setflashtext">flash</string>
    <string name="contact_search">search contacts</string>
    <string name="addcontact">add</string>
    <string name="toast_enter_first_name">Enter first name</string>
</resources>
