<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.AddContact"
    tools:showIn="@layout/activity_add_contact">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_contact_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_10dp"
        android:layout_marginBottom="@dimen/padding_5dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/profilePicLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profilePicImageView"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginRight="@dimen/padding_5dp"
            android:text="@string/first_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:singleLine="true">

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginRight="@dimen/padding_5dp"
            android:text="@string/last_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_5dp"
            android:layout_weight="1"
            android:ems="10"

            android:inputType="textPersonName"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginRight="@dimen/padding_5dp"
            android:text="@string/phone_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginRight="@dimen/padding_5dp"
            android:text="@string/email_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="@dimen/padding_5dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonAddContact"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/add_contacts_button" />
    </TableRow>


</TableLayout>