<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.EditContact"
    tools:showIn="@layout/activity_edit_contact">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_contacts_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_10dp"
        android:layout_marginBottom="@dimen/padding_5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher" />
    </TableRow>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_5dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="25"
                android:maxLines="1"
                android:hint="First Name"
                android:inputType="textPersonName">

                <requestFocus />
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_5dp"
                android:layout_weight="1"
                android:maxLength="25"
                android:ems="10"
                android:maxLines="1"
                android:hint="Last Name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_5dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:maxLines="1"
                android:hint="Phome Number"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_5dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLines="1"
                android:maxLength="50"
                android:hint="Email Address"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_5dp"
        android:gravity="center"
        android:weightSum="2">

        <Button
            android:id="@+id/btEditContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/edit_contacts_button" />

        <Button
            android:id="@+id/btDeleteContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/delete_contacts_button" />

    </TableRow>

</TableLayout>
